--- a/src/components/person/Person.css
+++ b/src/components/person/Person.css
@@ -1,3 +1,7 @@
+*{
+    background-color: green ;
+    color: white;
+}
 .parson-section{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -19,7 +23,7 @@ transition: 500ms;
     
 }
 .person:hover{
-     color: #000;
+    background-color: rgb(135, 91, 204);
   background-color: white;
 
 
